force-app/main/default/objects/Opportunity/fields/BCR_Required__c.field-meta.xml
<CustomField>
    <fullName>BCR_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BCR Required</label>
    <type>Checkbox</type>
</CustomField>