force-app/main/default/objects/Opportunity/fields/Bid_2_ID__c.field-meta.xml
<CustomField>
    <fullName>Bid_2_ID__c</fullName>
    <label>Bid 2 ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>