force-app/main/default/objects/Opportunity/fields/Bid_New_Version__c.field-meta.xml
<CustomField>
    <fullName>Bid_New_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For testing ny bid portal</description>
    <label>Bid New Version</label>
    <type>Checkbox</type>
</CustomField>