force-app/main/default/objects/Opportunity/fields/Bid_Number_0__c.field-meta.xml
<CustomField>
    <fullName>Bid_Number_0__c</fullName>
    <formula>CASE (Stage_ID__c,
&quot;1&quot;, Bid_Number_1__c ,
&quot;2a&quot;, Bid_Number_2a__c,
&quot;2b&quot;, Bid_Number_2a__c,
&quot;3a&quot;, Bid_Number_3a__c,
&quot;3b&quot;, Bid_Number_3a__c,
&quot;4a&quot;, Bid_Number_4a__c,
&quot;4b&quot;, Bid_Number_4a__c,
&quot;5&quot;, Bid_Number_4a__c,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Number 0</label>
    <type>Text</type>
</CustomField>