force-app/main/default/objects/Opportunity/fields/Bid_Number_3a__c.field-meta.xml
<CustomField>
    <fullName>Bid_Number_3a__c</fullName>
    <label>Bid Number 3a</label>
    <length>15</length>
    <type>Text</type>
</CustomField>