force-app/main/default/objects/Opportunity/fields/Bid_Old_Version__c.field-meta.xml
<CustomField>
    <fullName>Bid_Old_Version__c</fullName>
    <formula>AND ( 
OR( 
AND( !ISBlank( Bid_Number_1__c ) , Left( Stage_ID__c, 1 )= &quot;1&quot; ), 
AND( !ISBlank( Bid_Number_2a__c ) , Left( Stage_ID__c, 1 )= &quot;2&quot; ), 
AND( !ISBlank( Bid_Number_3a__c ) , Left( Stage_ID__c, 1 )= &quot;3&quot; ), 
AND( !ISBlank( Bid_Number_4a__c ) , Left( Stage_ID__c, 1 )= &quot;4&quot; )),
 LastModifiedById = &quot;00558000000VjOEAA0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Old Version</label>
    <type>Checkbox</type>
</CustomField>