force-app/main/default/objects/Opportunity/fields/Bid_Room_1__c.field-meta.xml
<CustomField>
    <fullName>Bid_Room_1__c</fullName>
    <formula>IF( Bid_Room_1_redirect__c =&quot;&quot;,
IF( Bid_Number_1__c = &quot;&quot; , &quot;&quot;,
HYPERLINK(
 &quot;https://steria.sharepoint.com/sites/intra_sc_tilbud/&quot; + Bid_Number_1__c + &quot;/SitePages/Hjemmeside.aspx?Title=&quot; + 
SUBSTITUTE(
  Account_Name__c  + &quot; - &quot; + Stage_ID__c + &quot; - &quot; + Name,
&quot;&amp;&quot;, &quot;og&quot;),

&quot;https://steria.sharepoint.com/sites/intra_sc_tilbud/&quot; + Bid_Number_1__c)),
&quot;Contents of Bid Room 1 is transferred to Bid Room &quot; + LEFT(Bid_Room_1_redirect__c,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Room 1</label>
    <type>Text</type>
</CustomField>