force-app/main/default/objects/Opportunity/fields/Bid_Room_1_redirect__c.field-meta.xml
<CustomField>
    <fullName>Bid_Room_1_redirect__c</fullName>
    <label>Bid Room 1 redirect</label>
    <length>50</length>
    <type>Text</type>
</CustomField>