force-app/main/default/objects/Opportunity/fields/Bid_Room_EmailLink__c.field-meta.xml
<CustomField>
    <fullName>Bid_Room_EmailLink__c</fullName>
    <formula>IF(Bid_Number__c != &quot;&quot;, 

Bid_Number__c + BID_URL_Country__c + &quot;?Title=&quot; + 

SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 

Account_Name__c + &quot; - &quot; + Stage_ID__c + &quot; - &quot; + Name, 
&quot;&amp;&quot;, &quot;og&quot;), 
&quot; &quot;, &quot;%20&quot;), 
&quot;#&quot;, &quot;-&quot;), 
&quot;Å&quot;, &quot;A&quot;), 
&quot;å&quot;, &quot;a&quot;), 
&quot;Ø&quot;, &quot;O&quot;), 
&quot;ø&quot;, &quot;o&quot;), 
&quot;Æ&quot;, &quot;A&quot;), 
&quot;æ&quot;, &quot;a&quot;), 
&quot;Ä&quot;, &quot;A&quot;), 
&quot;ä&quot;, &quot;a&quot;), 
&quot;,&quot;, &quot; &quot;), 


&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Room EmailLink</label>
    <type>Text</type>
</CustomField>