force-app/main/default/objects/Opportunity/fields/Bid_Transit__c.field-meta.xml
<CustomField>
    <fullName>Bid_Transit__c</fullName>
    <formula>If ( 
AND (Is_Created_in_bid_portal__c = True, 
New_Template__c = False, 
OR ( 
AND (LEFT(Stage_ID__c, 1) = &quot;1&quot;, ISBLANK(Bid_Number_1__c)), 
AND (LEFT(Stage_ID__c, 1) = &quot;2&quot;, ISBLANK(Bid_Number_2a__c)), 
AND (LEFT(Stage_ID__c, 1) = &quot;3&quot;, ISBLANK(Bid_Number_3a__c)), 
AND (LEFT(Stage_ID__c, 1) = &quot;4&quot;, ISBLANK(Bid_Number_4a__c)))), 

TRUE, 
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Transit</label>
    <type>Checkbox</type>
</CustomField>