force-app/main/default/objects/Opportunity/fields/BU_SysId__c.field-meta.xml
<CustomField>
    <fullName>BU_SysId__c</fullName>
    <description>Sys Id from HR data for opportunities. Used in Service NOW for Resource liset
Do not remove</description>
    <formula>IF(INCLUDES(Business_Unit__c,&apos;APPS&apos;) &amp;&amp; Owner_Country__c = &apos;Denmark&apos;,&apos;cb0535d1d7d7100c1dd2eed0f0c60000;&apos;,null) &amp;
IF(INCLUDES(Business_Unit__c,&apos;APPS&apos;) &amp;&amp; Owner_Country__c = &apos;Norway&apos;, &apos;cb0535d1d7d7100c1dd2a79cdac90000;&apos;,null) &amp;
IF(INCLUDES(Business_Unit__c,&apos;Advisory&apos;),&apos;cb0535d1d7d7100c1dd3125bca640000;&apos;,null) &amp;
IF(INCLUDES(Business_Unit__c,&apos;BD&apos;),&apos;cb0535d1d7d7100c1dd33258aa420000;&apos;,null) &amp;
IF(INCLUDES(Business_Unit__c,&apos;DPS&apos;),&apos;cb0535d1d7d7100c1dd2f1d2640d0000;&apos;,null) &amp;
IF(INCLUDES(Business_Unit_SE__c,&apos;BVS&apos;),&apos;cb0535d1d7d7100c1dd356875c4d0000;&apos;,null) &amp;
IF(INCLUDES(Business_Unit_SE__c,&apos;Advisory Services&apos;),&apos;cb0535d1d7d7100c1dd345a8a7af0000;&apos;,null) &amp;
IF(INCLUDES(Business_Unit_SE__c,&apos;DPS&apos;),&apos;cb0535d1d7d7100c1dd34eaf82ce0000;&apos;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BU SysId</label>
    <type>Text</type>
</CustomField>