force-app/main/default/objects/Opportunity/fields/BUApps__c.field-meta.xml
<CustomField>
    <fullName>BUApps__c</fullName>
    <formula>IF(INCLUDES(Business_Unit__c, &apos;APPS&apos;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BUApps</label>
    <type>Checkbox</type>
</CustomField>