force-app/main/default/objects/Opportunity/fields/BUDPS__c.field-meta.xml
<CustomField>
    <fullName>BUDPS__c</fullName>
    <description>In addition to severla reports, the field is used as search filter for extracting data to DPS resource list in Sharepoint, Do not delete!</description>
    <formula>IF(OR (INCLUDES(Business_Unit_SE__c, &apos;DPS&apos;), INCLUDES(Business_Unit__c, &apos;DPS&apos;)),true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BUDPS</label>
    <type>Checkbox</type>
</CustomField>