force-app/main/default/objects/Opportunity/fields/Busines_Unit_SE_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Busines_Unit_SE_Snapshot__c</fullName>
    <description>**************
Formula must be updated when Business Unit SE is modified with new picklist values!</description>
    <formula>SUBSTITUTE(SUBSTITUTE((IF ( INCLUDES ( Business_Unit_SE__c , &quot;BVS&quot; ), &quot;BSV;&quot;,null ) &amp;
IF ( INCLUDES ( Business_Unit_SE__c , &quot;BA&quot; ), &quot;BA;&quot;,null ) &amp;
IF ( INCLUDES ( Business_Unit_SE__c , &quot;BVS&quot; ), &quot;BVS;&quot;,null ) &amp;
IF ( INCLUDES ( Business_Unit_SE__c , &quot;DPS&quot; ), &quot;DPS;&quot;,null ) &amp;
IF ( INCLUDES ( Business_Unit_SE__c , &quot;Advisory Services&quot; ), &quot;Advisory Services;&quot;,null ) &amp;
IF ( INCLUDES ( Business_Unit_SE__c , &quot;North&quot; ), &quot;North;&quot;,null ) &amp;
IF ( INCLUDES ( Business_Unit_SE__c , &quot;West&quot; ), &quot;West;&quot;,null ) &amp; &quot;#&quot;), &quot;;#&quot;,&quot;&quot;),&quot;#&quot;,&quot;-&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Busines Unit SE Snapshot</label>
    <type>Text</type>
</CustomField>