force-app/main/default/objects/Opportunity/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <inlineHelpText>Select the BU’s that could be a part of the Opportunity.
This field is not required for the stages 
“Planning” and “Closed”</inlineHelpText>
    <label>Business Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Unit</valueSetName>
    </valueSet>
</CustomField>