force-app/main/default/objects/Opportunity/fields/Business_Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Count__c</fullName>
    <formula>IF(INCLUDES(Business_Unit__c, &quot;APPS&quot;), 1, 0 ) + 
IF(INCLUDES(Business_Unit__c, &quot;Advisory&quot;), 1, 0 ) + 
IF(INCLUDES(Business_Unit__c, &quot;DPS&quot; ) , 1, 0) +
IF(INCLUDES(Business_Unit__c, &quot;BD&quot; ) , 1, 0) +
IF(INCLUDES(Business_Unit__c, &quot;Biometrics&quot; ) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>