force-app/main/default/objects/Opportunity/fields/Business_Unit_Filter__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Filter__c</fullName>
    <formula>IF(ISBLANK(Business_Unit__c), &quot;APPS; DPS; Advisory; BD; Biometrics; &quot;, 
    IF(INCLUDES(Business_Unit__c, &quot;APPS&quot;), &quot;APPS; &quot;, &quot;&quot;) &amp;
    IF(INCLUDES(Business_Unit__c, &quot;DPS&quot;), &quot;DPS; &quot;, &quot;&quot;) &amp;
    IF(INCLUDES(Business_Unit__c, &quot;Advisory&quot;), &quot;Advisory; &quot;, &quot;&quot;) &amp;
    IF(INCLUDES(Business_Unit__c, &quot;BD&quot;), &quot;BD; &quot;, &quot;&quot;) &amp;
    IF(INCLUDES(Business_Unit__c, &quot;Biometrics&quot;), &quot;Biometrics; &quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>formula field for multi select PL Business Unit. This will be used for component/ section visibility on dynamic forms.</inlineHelpText>
    <label>Business Unit Filter</label>
    <type>Text</type>
</CustomField>