force-app/main/default/objects/Opportunity/fields/Business_Unit_NO_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_NO_Snapshot__c</fullName>
    <description>**************
Remember to update Business Unit NO Snapshot formula field on Opportunity when new picklist values are added!
**************************</description>
    <formula>SUBSTITUTE(SUBSTITUTE((IF ( INCLUDES ( Business_Unit_SE__c , &quot;BVS&quot; ), &quot;BVS;&quot;,null ) &amp;
IF ( INCLUDES ( Business_Unit__c , &quot;APPS&quot; ), &quot;APPS;&quot;,null ) &amp;
IF ( INCLUDES ( Business_Unit__c , &quot;Advisory&quot; ), &quot;Advisory;&quot;,null ) &amp;
IF ( INCLUDES ( Business_Unit__c , &quot;DPS&quot; ), &quot;DPS;&quot;,null ) &amp;
IF ( INCLUDES ( Business_Unit__c , &quot;Biometrics&quot; ), &quot;Biometrics;&quot;,null ) &amp;
IF ( INCLUDES ( Business_Unit__c , &quot;BD&quot; ), &quot;BD;&quot;,null ) &amp; &quot;#&quot;), &quot;;#&quot;,&quot;&quot;),&quot;#&quot;,&quot;-&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit NO Snapshot</label>
    <type>Text</type>
</CustomField>