force-app/main/default/objects/Opportunity/fields/Business_Unit_SE__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_SE__c</fullName>
    <description>**************
Remember to update Business Unit SE Snapshot formula field when new picklist values are added!
**************************</description>
    <label>Business Unit SE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DPS</fullName>
                <label>Digital Platform Services</label>
            </value>
            <value>
                <fullName>BVS</fullName>
                <label>Business Value Services</label>
            </value>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>Apps</fullName>
                <isActive>false</isActive>
                <label>Applications</label>
            </value>
            <value>
                <fullName>BC</fullName>
                <isActive>false</isActive>
                <label>Business Consulting</label>
            </value>
            <value>
                <fullName>Core</fullName>
                <isActive>false</isActive>
                <label>Core Tech Solutions</label>
            </value>
            <value>
                <fullName>East</fullName>
                <isActive>false</isActive>
                <label>East</label>
            </value>
            <value>
                <fullName>Eggs Part Of Sopra Steria</fullName>
                <isActive>false</isActive>
                <label>Eggs Part Of Sopra Steria</label>
            </value>
            <value>
                <fullName>North</fullName>
                <isActive>false</isActive>
                <label>North</label>
            </value>
            <value>
                <fullName>West</fullName>
                <isActive>false</isActive>
                <label>West</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>