force-app/main/default/objects/Opportunity/fields/Buying_Process__c.field-meta.xml
<CustomField>
    <fullName>Buying_Process__c</fullName>
    <label>Buying Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5% Kunden er fornøyd, men...</fullName>
            </value>
            <value>
                <fullName>10% Kunden har erkjent at de har et problem</fullName>
            </value>
            <value>
                <fullName>30% Kunden har begynt å se etter alternativer</fullName>
            </value>
            <value>
                <fullName>60% Kunden har publisert RFP / bedt om tilbud</fullName>
            </value>
            <value>
                <fullName>80% Tilbudsavklaringer og forhandlinger</fullName>
            </value>
            <value>
                <fullName>100% Kunden har akseptert vårt tilbud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>