force-app/main/default/objects/Opportunity/fields/C3_Level__c.field-meta.xml
<CustomField>
    <fullName>C3_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C3 Level</label>
    <type>Checkbox</type>
</CustomField>