force-app/main/default/objects/Opportunity/fields/Call_off_Abandoned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Call_off_Abandoned_Reason__c</fullName>
    <inlineHelpText>Short description of why Call-off was abandoned</inlineHelpText>
    <label>Call off Abandoned Reason</label>
    <type>TextArea</type>
</CustomField>