force-app/main/default/objects/Opportunity/fields/Call_off_according_to_Avropsinstruktion__c.field-meta.xml
<CustomField>
    <fullName>Call_off_according_to_Avropsinstruktion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box when review of Call of from frame agreement is done in accordance with Avropsinstruktion for the frame agreement. Please note: Do not check the box Contract review acccording to DOA for Call offs</inlineHelpText>
    <label>Call off according to Avropsinstruktion</label>
    <type>Checkbox</type>
</CustomField>