force-app/main/default/objects/Opportunity/fields/Call_Off_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Off_Due_Date__c</fullName>
    <inlineHelpText>Enter the date when the call-off must be answered at the latest</inlineHelpText>
    <label>Call-Off Due Date</label>
    <type>Date</type>
</CustomField>