force-app/main/default/objects/Opportunity/fields/Call_Off_Other_Roles__c.field-meta.xml
<CustomField>
    <fullName>Call_Off_Other_Roles__c</fullName>
    <description>Use this field only when your Call-Off Role is not found in picklist Call-Off Role.</description>
    <inlineHelpText>Use this field only when your Call-Off Role is not found in picklist Call-Off Role.</inlineHelpText>
    <label>Call-Off Other Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>