force-app/main/default/objects/Opportunity/fields/Call_Off_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Off_Request_Date__c</fullName>
    <inlineHelpText>Enter the date when the call-off arrived</inlineHelpText>
    <label>Call-Off Request Date</label>
    <type>Date</type>
</CustomField>