force-app/main/default/objects/Opportunity/fields/Call_Off_Role__c.field-meta.xml
<CustomField>
    <fullName>Call_Off_Role__c</fullName>
    <inlineHelpText>Choose which role the call-off most relates to</inlineHelpText>
    <label>Call-Off Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Frame_Agreement_Sub_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Databas</fullName>
            </value>
            <value>
                <fullName>Database design and administration</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Developer .Net</fullName>
            </value>
            <value>
                <fullName>Developer Java</fullName>
            </value>
            <value>
                <fullName>Developer Other</fullName>
            </value>
            <value>
                <fullName>Förvaltningsledare</fullName>
            </value>
            <value>
                <fullName>Infrastruktur</fullName>
            </value>
            <value>
                <fullName>Product Owner</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Scrum Master</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Service manager</fullName>
            </value>
            <value>
                <fullName>System developer</fullName>
            </value>
            <value>
                <fullName>Technical project manager</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Test leader</fullName>
            </value>
            <value>
                <fullName>Test Manager</fullName>
            </value>
            <value>
                <fullName>UI/UX</fullName>
            </value>
            <value>
                <fullName>Webb</fullName>
            </value>
            <value>
                <fullName>Web developer</fullName>
            </value>
            <value>
                <fullName>Projektledare</fullName>
            </value>
            <value>
                <fullName>Teknisk Projektledare</fullName>
            </value>
            <value>
                <fullName>Tjänsteansvarig</fullName>
            </value>
            <value>
                <fullName>Databasdesigner/databasadministratör</fullName>
            </value>
            <value>
                <fullName>Enterprisearkitekt</fullName>
            </value>
            <value>
                <fullName>Infrastrukturarkitekt</fullName>
            </value>
            <value>
                <fullName>Konfigurations- och versionshanterare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>