force-app/main/default/objects/Opportunity/fields/Call_Off_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Off_Type__c</fullName>
    <inlineHelpText>Specify the type of call-off, if specified, like RFI or RFP</inlineHelpText>
    <label>Call-Off Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>