force-app/main/default/objects/Opportunity/fields/Call_Off_Won_By_Subcontractor__c.field-meta.xml
<CustomField>
    <fullName>Call_Off_Won_By_Subcontractor__c</fullName>
    <inlineHelpText>When the call-off becomes Won and it is a subcontractor who wins specify which one</inlineHelpText>
    <label>Call-Off Won By Subcontractor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subcontractor_SE</valueSetName>
    </valueSet>
</CustomField>