force-app/main/default/objects/Opportunity/fields/CalloffContract__c.field-meta.xml
<CustomField>
    <fullName>CalloffContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call-off Contract</label>
    <referenceTo>Contract_Archive__c</referenceTo>
    <relationshipLabel>Opportunities (Call-off Contract)</relationshipLabel>
    <relationshipName>CalloffContracts</relationshipName>
    <type>Lookup</type>
</CustomField>