force-app/main/default/objects/Opportunity/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <formula>(&apos;Opportunity Review fields have been moved out of the opportunity screen and into the new Opportunity Review related object. You find this info in the &quot;Opportunity Review&quot; section in the panel on the right hand side, where you can now also add multiple Opportunity Review documents to decsribe steps / progress in the interaction with the client. --&gt;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change</label>
    <type>Text</type>
</CustomField>