force-app/main/default/objects/Opportunity/fields/Close_Date_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Awarded__c</fullName>
    <label>Close Date Awarded</label>
    <type>DateTime</type>
</CustomField>