force-app/main/default/objects/Opportunity/fields/Close_Date_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Overdue__c</fullName>
    <description>Gives the insight if the Close Date of an Opportunity has passed or is still ongoing.</description>
    <formula>IF( CloseDate &lt; TODAY(), &quot;Overdue&quot;, &quot;&quot;)</formula>
    <label>Close Date Overdue</label>
    <type>Text</type>
</CustomField>