force-app/main/default/objects/Opportunity/fields/Close_Month__c.field-meta.xml
<CustomField>
    <fullName>Close_Month__c</fullName>
    <formula>RIGHT(&quot;0&quot; + LEFT(TEXT(MONTH(CloseDate)),2),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Month</label>
    <type>Text</type>
</CustomField>