force-app/main/default/objects/Opportunity/fields/Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date__c</fullName>
    <description>Set to Today() when opportunity is set to 
-Awarded Closed Lost/Won or Abandoned (NO, DK)
-Awarded (SE)</description>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>