force-app/main/default/objects/Opportunity/fields/Competitor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Comments__c</fullName>
    <label>Competitor Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>