force-app/main/default/objects/Opportunity/fields/Congratulations_for_Path__c.field-meta.xml
<CustomField>
    <fullName>Congratulations_for_Path__c</fullName>
    <description>Defunct</description>
    <formula>&apos;Gratulerer!&apos;&amp;BR() &amp; &apos;Sopra Steria er tildelt kontrakten!&apos;&amp; BR() &amp; 
&apos;Når du mottar signert kontrakt sendes denne til &apos;&amp;  HYPERLINK(&apos;mailto:contracts@soprasteria.com&apos;, &apos;contracts@soprasteria.com&apos;) &amp; BR() &amp;
&apos;Contracts setter Opty til Steg Closed når kontrakten er mottatt.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gratulerer</label>
    <type>Text</type>
</CustomField>