force-app/main/default/objects/Opportunity/fields/Connected_Contract_Info__c.field-meta.xml
<CustomField>
    <fullName>Connected_Contract_Info__c</fullName>
    <formula>&quot;You can&apos;t edit the fields in the Contract section here. Instead, use the &apos;Select Contract&apos; button at the top of the page to select contract&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connected Contract Info</label>
    <type>Text</type>
</CustomField>