force-app/main/default/objects/Opportunity/fields/ConnectedToExistingContract__c.field-meta.xml
<CustomField>
    <fullName>ConnectedToExistingContract__c</fullName>
    <label>Connected to existing contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>