force-app/main/default/objects/Opportunity/fields/Consultant_Onsite__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Onsite__c</fullName>
    <label>Consultant Onsite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>