force-app/main/default/objects/Opportunity/fields/Consultants_0_30d__c.field-meta.xml
<CustomField>
    <fullName>Consultants_0_30d__c</fullName>
    <description>Calculate required resources for current month</description>
    <formula>IF( AND(IsClosed = False, TEXT(StageName) != &quot;5 - Awarded&quot;, Assignment_Start_Date__c &lt; TODAY(), Assignment_End_Date__c &gt; TODAY()), 
			Consultants__c * Probability__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consultants 0-30d</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>