force-app/main/default/objects/Opportunity/fields/Consultants_60_90d__c.field-meta.xml
<CustomField>
    <fullName>Consultants_60_90d__c</fullName>
    <formula>IF( AND(IsClosed = False, TEXT(StageName) != &quot;5 - Awarded&quot;, Assignment_Start_Date__c &lt; TODAY()+ 60, Assignment_End_Date__c &gt; TODAY()+ 60), 
			Consultants__c * Probability__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consultants 60-90d</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>