force-app/main/default/objects/Opportunity/fields/Consultants__c.field-meta.xml
<CustomField>
    <fullName>Consultants__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The total number of consultants you believe this deal will include, measured in FTE (Full Time Equivalent)</inlineHelpText>
    <label># Consultants</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>