force-app/main/default/objects/Opportunity/fields/Contact_Business_Relation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Business_Relation__c</fullName>
    <description>Used to display Opportunity contact&apos;s Business relation in reports and popup windows</description>
    <formula>TEXT(Opportunity_Contact__r.Business_Relation_to_Sopra_Steria__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Business Relation</label>
    <type>Text</type>
</CustomField>