force-app/main/default/objects/Opportunity/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call off</fullName>
            </value>
            <value>
                <fullName>Agreement on existing contract</fullName>
            </value>
            <value>
                <fullName>Capacity agreement</fullName>
            </value>
            <value>
                <fullName>Frame agreement</fullName>
            </value>
            <value>
                <fullName>Agreement without existing contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>