force-app/main/default/objects/Opportunity/fields/Contract_Category_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>Contract_Category_FollowUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TEmporary field to follow up opportunities with missing contract category.
Used to populate view &quot;No Contract Category&quot;</description>
    <label>Contract Category FollowUp</label>
    <type>Checkbox</type>
</CustomField>