force-app/main/default/objects/Opportunity/fields/Contract_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contract_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Contract</label>
    <referenceTo>Contract_Archive__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>