force-app/main/default/objects/Opportunity/fields/Contract_Missing__c.field-meta.xml
<CustomField>
    <fullName>Contract_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that oppotunity is set to Awarded, but no contract has been added</description>
    <label>Contract Missing</label>
    <type>Checkbox</type>
</CustomField>